Pack of fixes; README.md is  created

--- a/src/web/main/templates/pages/index.html
+++ b/src/web/main/templates/pages/index.html
@@ -157,14 +157,14 @@
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <h3>Разнообразные гаджеты</h3>
-            <p class="lead mb-0">Захватывайте территорию противника разными способами!</p>
+            <h3>Соревновательность</h3>
+            <p class="lead mb-0">Заполучите победу для своей фракции в сетевом противостоянии!</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-            <h3>Коммюнити</h3>
-            <p class="lead mb-0">Все игроки могут общаться в одном чате внутри игры!</p>
+	    <h3>Разнообразные стратегии</h3>
+            <p class="lead mb-0">Захватывайте территорию, развивайте её и не давайте сделать этого противнику!</p>
           </div>
         </div>
       </div>
