Title has been changed to the old version

--- a/src/web/main/templates/base/menu.html
+++ b/src/web/main/templates/base/menu.html
@@ -27,7 +27,7 @@
             {% endblock %}
         </ul>
 
-        <a class="navbar-brand d-none d-xl-block" style="font-size: 130%; position: absolute; margin-left: 45%;" href="/">NetWars</a>
+        <a class="navbar-brand d-none d-xl-block" style="font-size: 130%; position: absolute; margin-left: 37%;" href="/">Network Confrontation</a>
 
         <ul class="navbar-nav">
 
