--- a/src/web/main/templates/base/base.html
+++ b/src/web/main/templates/base/base.html
@@ -30,7 +30,7 @@
 
         <footer class="footer bg-dark">
                 <div class="container text-right">
-                    <div class="text-white cyberfont">&copy; MS103</div>
+                    <div class="text-white">&copy; MS103</div>
                 </div>
         </footer>
 
