--- a/src/web/main/templates/pages/index.html
+++ b/src/web/main/templates/pages/index.html
@@ -131,7 +131,8 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Добро пожаловать в NetWars!</h1>
+          <h2 class="mb-0">Добро пожаловать в</h2>
+	  <h1 class="mb-5">Network Confrontation!</h1>
         </div>
         <div class="col-md-6 offset-md-3 mx-auto">
           <form class="col-md-6 offset-md-3">
